<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout android:id="@+id/radio_btn_group" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_gravity="center">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/radio_btn_apprtc" android:text="@string/apprtc_url"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/edittext_apprtc" android:hint="@string/apprtc_hint_id"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/radio_btn_cmore_webrtc" android:text="@string/cmorertc_root"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/radio_btn_cmore_webrtc_custom" android:text="@string/cmorertc_url_call"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/edittext_cmore_webrtc_custom_call" android:hint="@string/call"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/cmorertc_from"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/edittext_cmore_webrtc_custom_from" android:hint="@string/cmorertc_hint_from"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/text_btn_go" android:id="@+id/btn_go"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>